src/test/ui/issues/issue-2330.stderr
error[E0404]: expected trait, found enum `chan`
  --> $DIR/issue-2330.rs:18:6
   |
LL | impl chan for isize { //~ ERROR expected trait, found enum `chan`
   |      ^^^^ not a trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0404`.
